--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.2.1",
+    "re2": "^1.18.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "twitter-api-v2": "^1.12.10",
     "youtube-dl-exec": "^2.1.10"
   },
   "devDependencies": {
