--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "NODE_ENV=dev nest start --debug --watch",
     "start:prod": "NODE_ENV=prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -25,8 +25,13 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cache-manager": "^4.0.0",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "axios": "^1.2.1",
+    "cache-manager": "^4.0.0",
+    "cache-manager-redis-store": "^2.0.0",
     "re2": "^1.18.0",
+    "redis": "3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
