creation of a small instagram api wrapper; need to add session cookie in filestore

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "axios": "^1.2.1",
     "cache-manager": "^4.0.0",
     "cache-manager-redis-store": "^2.0.0",
-    "instagram-web-api": "^2.2.2",
     "re2": "^1.18.0",
     "redis": "3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "tough-cookie-filestore2": "^1.0.0",
     "twitter-api-v2": "^1.12.10",
     "youtube-dl-exec": "^2.1.10"
   },
